--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Agrigarden",
     "short_name": "Agrigarden",
     "description": "Sistema de Gestión Agrigarden",
-    "start_url": "/dashboard.html",
+    "start_url": "./dashboard.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#19e66b",
