--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name": "Agrigarden",
     "short_name": "Agrigarden",
     "description": "Sistema de Gestión Agrigarden",
-    "start_url": "/agrigarden-sistema/dashboard.html",
-    "scope": "/agrigarden-sistema/",
+    "start_url": "dashboard.html",
+    "scope": "./",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#19e66b",
